# project-manager

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/config/: autocapture.rs  constants.rs  desugar.rs  expand.rs  mod.rs  parse.rs
src/models/: command.rs
src/parse/: constants.rs  desugar.rs  expand.rs  mod.rs  normalize.rs
src/program/: args.rs  cli.rs
src/program/commands/: list.rs  list_commands.rs  mod.rs  run_command.rs
src/util/: mod.rs  path.rs  yaml.rs
