[package]
name = "project-manager"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "project-manager"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
color-eyre = "0.6.5"
serde = { version = "1.0.221", features = ["derive"] }
serde_with = "3.14.0"
serde_yaml = "0.9.34"
